--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,18 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Julia.jl</h1>
-        <p class="header">Curated decibans of Julia language.</p>
+        <h1>Julia.jl</h1>
+        <p>Curated decibans of Julia language.</p>
+
+        <p class="view"><a href="https://github.com/svaksha/Julia.jl">View the Project on GitHub <small>svaksha/Julia.jl</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/svaksha/Julia.jl">View On GitHub</a></li>
+          <li><a href="https://github.com/svaksha/Julia.jl/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/svaksha/Julia.jl/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/svaksha/Julia.jl">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/svaksha">svaksha</a></p>
-
-
       </header>
       <section>
         <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
@@ -46,6 +44,7 @@
 
 <ul>
 <li><a href="#guidelines">Guidelines</a></li>
+<li><a href="#bugreport-pullrequest">BugReport-PullRequest</a></li>
 </ul>
 </li>
 </ul>
@@ -55,7 +54,7 @@
 <h1>
 <a id="index" class="anchor" href="#index" aria-hidden="true"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
+<p>For Base packages, check if the package you seek is listed in the <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions. For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl">sample Julia package</a> model. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
 
 <ul>
 <li>
@@ -81,11 +80,13 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
 <li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Hardware.md">Hardware.md</a> :: Software for cross-platform hardware and other API libraries.</li>
+<li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/HPC.md">HPC.md</a> :: HPC, Distributed Computing, Cloud computing, Cluster computing, Grid computing, Kernels and architectures like ARM, MIPS, GPU, CUDA, etc...</li>
+<li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/i18n-L10n.md">i18n-L10n.md</a> :: Transliteration, Internationalisation (i18n) and Localisation (L10n)</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Mathematics.md">Mathematics.md</a>:: Algebra, Geometry,... anything Math related.</li>
-<li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/Parallel-Computing.md">Parallel-Computing.md</a> :: HPC, Distributed Computing, Cloud computing, Cluster computing, Grid computing, ...</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Physics.md">Physics.md</a> :: Julia software related to Physics.</li>
 <li>
@@ -105,8 +106,6 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud WWW, HTTP, Networking, Servers, etc... </li>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
-<li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/anonymous.md">anonymous.md</a> :: Repos that lack package clarity about the category or their classification is difficult despite skimming through the codebase will be listed here.</li>
 </ul>
 
@@ -119,7 +118,7 @@
 
 <ul>
 <li>COPYRIGHT © 2012-Now <a href="http://svaksha.com/pages/Bio">SVAKSHA</a>, All Rights Reserved. </li>
-<li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file.</li>
+<li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file and ALL copies and forks of this work must retain the Copyright, Licence (LICENSE.md file) and this permission notice.</li>
 </ul>
 
 <h2>
@@ -137,34 +136,39 @@
 <h1>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>CONTRIBUTE</h1>
 
+<p><a href="https://github.com/svaksha/Julia.jl/graphs/contributors">Contributions</a> to <code>Julia.jl</code> are welcome in the form of pull requests (PR). Here are some guidelines and tips on how to submit a Bug Report (BR) and/or <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>:</p>
+
 <h2>
 <a id="guidelines" class="anchor" href="#guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Guidelines</h2>
 
 <p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
 
-<p>References :</p>
+<ul>
+<li>References :
 
 <ul>
 <li><a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a></li>
 <li><a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a></li>
 </ul>
+</li>
+</ul>
 
-<h4>
-<a id="to-submit-a-pr" class="anchor" href="#to-submit-a-pr" aria-hidden="true"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
-</h4>
+<h2>
+<a id="bugreport-pullrequest" class="anchor" href="#bugreport-pullrequest" aria-hidden="true"><span class="octicon octicon-link"></span></a>BugReport-PullRequest</h2>
 
 <ol>
 <li>Add your link as per the top-level Category page within the topic sub-section(s), in <em>alphabetical order</em>, with notes (if any) in the markdown files.</li>
-<li>For broken links or outdated information, submit a bug report, or make the necessary changes and submit a PR. Please submit separate PR's for each link or change added.</li>
+<li>For broken links or outdated information, submit a bug report (BR), or make the necessary changes and submit a PR. Both are welcome. Please submit separate PR's for each link or change added.</li>
 <li>For Documentation and cookbooks, check if it matches the categories listed, else, list it on the <a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> page.</li>
-<li>For those unable to use git, create a github account, fork the <code>Julia.jl</code> repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
+<li>For those unable to use git, create a github account, then fork the <code>Julia.jl</code> repo on the user interface. Then edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
 </ol>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/svaksha">svaksha</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
